--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-loader-spinner": "^3.1.14",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.0",
+    "sweetalert2": "^10.10.1",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
